# credit-card-validation-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  credit-card-validation.go  go.mod
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  credit-card-validation.rockspec  credit-card-validation_sdk.lua  credit-card-validation_types.lua  features.lua
php/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  composer.json  (+3 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  creditcardvalidation_sdk.py  creditcardvalidation_types.py  features.py  pyproject.toml
py/core/: context.py  error.py  helpers.py  operation.py  utility_type.py
py/entity/: validation_entity.py
py/feature/: cache_feature.py  idempotency_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  ratelimit_feature.py  rbac_feature.py  test_feature.py
py/test/: runner.py  test_exists.py  test_netsim.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py  test_validation_direct.py  test_validation_entity.py
py/utility/: clean.py  done.py  feature_add.py  feature_hook.py  feature_init.py  make_context.py  make_error.py  make_fetch_def.py  make_response.py  make_result.py  make_spec.py  make_url.py  prepare_auth.py  prepare_headers.py  prepare_method.py  prepare_params.py  result_headers.py
(+409 files in other folders)
